some visual changes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <div class="container">
+    <div id="container">
 
         <header>
             <h1 id="title">A True Player Form</h1>
