little submit change

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </fieldset>
 
             </div>
-            <p>Search for perfect game!</p>
+            <p class="submitLabel">Search for perfect game!</p>
             <button type="submit" id="submit">Search!</button>
             </form>
         </article>
